--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -5,14 +5,14 @@
     border-b border-slate border-none hover:border-dashed
       href="https://ddiu.io" target="_blank"
     >
-      Diu
+      MitySS
     </a>
     <span px-1>|</span>
     <a
       border-b border-slate border-none hover:border-dashed
-      href="https://github.com/ddiu8081/chatgpt-demo" target="_blank"
+      href="https://t.me/MitySS" target="_blank"
     >
-      Source Code
+      Contact Me
     </a>
   </p>
 </footer>
