--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -3,7 +3,7 @@
     <span pr-1>Made by</span>
     <a
     border-b border-slate border-none hover:border-dashed
-      href="https://ddiu.io" target="_blank"
+      href="https://t.me/MitySS" target="_blank"
     >
       MitySS
     </a>
